# terraform_file_summary_agent

./: .gitignore  README.md  databricks_infrastructure_analysis_report.md  databricks_infrastructure_report_new.md  pyproject.toml
src/terraform_file_summary_agent/: crew.py  main.py
src/terraform_file_summary_agent/config/: agents.yaml  tasks.yaml
