[project]
name = "terraform_file_summary_agent"
version = "0.1.0"
description = "terraform_file_summary_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
terraform_file_summary_agent = "terraform_file_summary_agent.main:run"
run_crew = "terraform_file_summary_agent.main:run"
train = "terraform_file_summary_agent.main:train"
replay = "terraform_file_summary_agent.main:replay"
test = "terraform_file_summary_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
